# arc

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
ast/: ast_node.cpp  ast_node.h
bytecode/: disassembler.cpp  disassembler.h  forward.h  instruction.cpp  instruction.h  jump_address.h  package.cpp  package.h  register.h
cmd/: argument_parser.cpp  argument_parser.h  cmd_entry_point.cpp
compiler/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt  assertions.cpp  assertions.h  badge.h  defines.h  error.h  forward.h  numeric_limits.h  types.h  utf8_encoding.cpp  utf8_encoding.h
core/base/: argument_parser.cpp  argument_parser.h  assertions.cpp  assertions.h  numeric_limits.h  types.h
core/base/containers/: format.cpp  format.h  optional.h  own_ptr.h  ref_ptr.h  span.h  string.cpp  string.h  string_builder.cpp  string_builder.h  string_view.cpp  string_view.h  vector.h
core/base/memory/: byte_buffer.cpp  byte_buffer.h  memory_operations.cpp  memory_operations.h
core/bytecode/: forward.h  instruction.cpp  instruction.h  jump_address.h  package.cpp  package.h  register.h
core/containers/: array.h  format.cpp  format.h  optional.h  own_ptr.h  ref_ptr.h  span.h  string.cpp  string.h  string_builder.cpp  string_builder.h  string_view.cpp  string_view.h  vector.h
core/memory/: byte_buffer.cpp  byte_buffer.h  memory_operations.cpp  memory_operations.h
frontend/: ast.cpp  ast.h  source_location.cpp  source_location.h
runtime/: CMakeLists.txt  forward.h  instruction_execute.cpp  interpreter.cpp  interpreter.h  main.cpp  virtual_machine.cpp  virtual_machine.h
